kubernetes/apps/redis/cluster/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app: redis-enterprise
  name: redis-enterprise-admission
webhooks:
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      service:
        name: admission
        path: /admission
        namespace: OPERATOR_NAMESPACE
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lSQU0vRnV5US9RS1V1dmhiRVpSakViaFl3RFFZSktvWklodmNOQVFFTEJRQXcKUGpFa01DSUdBMVVFQ2hNYlVtVmthWE5NWVdKeklFRmtiV2x6YzJsdmJpQkRiMjUwY205c01SWXdGQVlEVlFRRApFdzFoWkcxcGMzTnBiMjR0ZEd4ek1CNFhEVEkxTURZeE56RXhNamcwTmxvWERUTXdNRFl4TmpFeE1qZzBObG93ClBqRWtNQ0lHQTFVRUNoTWJVbVZrYVhOTVlXSnpJRUZrYldsemMybHZiaUJEYjI1MGNtOXNNUll3RkFZRFZRUUQKRXcxaFpHMXBjM05wYjI0dGRHeHpNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQQpxd3lwQ0Fxc0VX [...]
    failurePolicy: Fail
    matchPolicy: Exact
    name: redisenterprise.admission.redislabs
    rules:
      - apiGroups:
          - app.redislabs.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - redisenterprisedatabases
          - redisenterpriseactiveactivedatabases
          - redisenterpriseremoteclusters
    sideEffects: None
    timeoutSeconds: 30
